libs/extractor/tests/snapshots/all_tests__style_order-7.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr#\"import {Box, css} from '@devup-ui/core'\n<Box\n        aria-disabled={false}\n        bg=\"red\"\n        className={css({\n          bg: 'blue',\n          styleOrder: 17,\n        })}\n        styleOrder={3}\n      />\n            \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "blue",
                level: 0,
                selector: None,
                style_order: Some(
                    17,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "red",
                level: 0,
                selector: None,
                style_order: Some(
                    3,
                ),
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n<div aria-disabled={false} className=\"a b\" />;\n",
}
